--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,29 +2,53 @@
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[project.urls]
+Homepage = "https://github.com/Ulibos/ndf-parse"
+Documentation = "https://ulibos.github.io/ndf-parse"
+
 [project]
 name = "ndf-parse"
 authors = [{name = "Ulibos"}]
 description = "A package for parsing and editing Eugen Systems ndf files."
-readme = "README.rst"
+readme = "README.md"
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
 keywords = ["ndf", "parser", "parsing"]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Other Audience",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: File Formats",
+]
 dynamic = ["version"]
-dependencies = ["tree-sitter"]
+dependencies = [
+    "tree-sitter ~= 0.21.0",
+    "typing_extensions; python_version < '3.11'"
+]
 
 [project.optional-dependencies]
 dev = [
-    "sphinx ~= 5.0.0",
-    "sphinx-rtd-theme >= 1.2",
-    "myst-parser ~= 1.0.0"
+    "sphinx ~= 7.0",
+    "furo ~= 2024.0",
+    "sphinx-multiversion ~= 0.2.4"
 ]
 
 [tool.setuptools]
-packages = ["ndf_parse", "ndf_parse.bin"]
+packages = ["ndf_parse", "ndf_parse.model", "ndf_parse.bin"]
 
 [tool.setuptools.package-data]
 ndf_parse = ["bin/ndf.dll"]
 
 [tool.setuptools.dynamic]
 version = {attr = "ndf_parse.__version__"}
+
+[tool.black]
+line-length = 79
